--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,67 @@ input {
     transform: scale(0.95);
     cursor: pointer;
 }
+
+.section-2 .content-box-2 {
+    color: black;
+}
+
+.mini-box img {
+    width: 55px;
+    height: 55px;
+    margin-right: 10px;
+}
+
+.content-box-2 {
+    width: 50%;
+    padding: 20px;
+}
+
+.content-box-2 .heading-2 {
+    font-size: 60px;
+}
+
+.img-box-2 {
+    width: 50%;
+}
+
+.content-box-2 p {
+    color: #696871;
+    margin-bottom: 40px;
+    margin-top: 30px;
+    font-size: 21px;
+    line-height: 39px;
+    letter-spacing: -0.656526px;
+    color: #696871;
+}
+
+.s2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+.mini-box {
+    display: flex;
+    width: 60%;
+    align-items: center;
+    justify-content: start;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #dedee0;
+    border-radius: 5px;
+}
+
+.mini-box:hover {
+    transform: scale(0.94);
+}
+
+.bold-span {
+    color: #000;
+    font-weight: bold;
+}
+
+.simple-span {
+    color: #696871;
+}
