--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: Circular Std;
-    color: white;
 }
 
 body {
@@ -14,6 +13,7 @@ body {
 }
 
 header {
+    color: white;
     background-color: #5454D4;
 }
 
@@ -89,10 +89,18 @@ h1 {
     margin-left: 8px;
 }
 
+.cart-text {
+    color: white;
+}
+
 .s1 {
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.section-1 {
+    padding-bottom: 100px;
 }
 
 .img-box-1 {
@@ -251,6 +259,7 @@ input {
     align-items: center;
     justify-content: center;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .mini-box {
@@ -276,3 +285,132 @@ input {
 .simple-span {
     color: #696871;
 }
+
+s3 {
+    color: #000 !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+}
+
+s3 h2 {
+    color: #000 !important;
+    width: 490px;
+    text-align: center;
+}
+
+.everything {
+    color: #000 !important;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.ev-list img {
+    width: 55px;
+    height: 55px;
+    margin-right: 10px;
+    margin-right: 10px;
+}
+
+.ev-list {
+    display: flex;
+    align-items: center;
+    width: 348px;
+    margin-right: 15px;
+    margin-top: 30px;
+    background-color: #fff;
+    color: #000 !important;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.ev-list:hover {
+    box-shadow: 0px 0px 10px 2px rgba(152, 219, 250, 0.7);
+    cursor: pointer;
+}
+
+.icon-p {
+    font-size: 21px;
+    line-height: 25px;
+    letter-spacing: -0.6565263867378235px;
+    text-align: left;
+}
+
+break {
+    flex-basis: 100%;
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+}
+
+.new {
+    position: relative;
+    width: 46%;
+    height: 600px;
+    background: white;
+}
+
+.k50 {
+    color: white;
+    width: 40%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-3 {
+    background: #413E65;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.img-box-4 {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+}
+
+.right {
+    position: relative;
+    left: -95px;
+}
+
+.left {
+    position: relative;
+    left: -30px;
+}
+
+.center-h {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 40%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.center-p {
+    width: 50%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    color: #696871;
+    font-size: 21px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: -0.656526px;
+}
+
+
+/* .left {
+    width: 30%;
+}
+
+.right {
+    width: 60%;
+} */
