--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Circular Std;
+    font-family: Circular Std Book;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: Circular Std;
+    font-family: Circular Std Book;
     user-select: none;
 }
 
@@ -597,11 +597,6 @@ h1 {
     align-items: center;
 }
 
-
-/* .left {
-    width: 30%;
+.Omega-heading {
+    color: white !important;
 }
-
-.right {
-    width: 60%;
-} */
